Fixing syntax errors, still trying to get project compile